Fixes disqus picking up wrong colour for links

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ h1 {
 	font: 700 25px/1.4 'Roboto Condensed', sans-serif;
 }
 
-a:hover, a:hover h1 {
+a, a:hover, a:hover h1 {
 	color: #359567;
 }
 
